--- a/stocks-app/src/App.css
+++ b/stocks-app/src/App.css
@@ -1,41 +1,34 @@
+*{
+  margin: 0;
+}
+
 body{
   background-color: black;
 }
-.App {
-  text-align: center;
+
+.app{
+  background-color: black;
+  place-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__header{
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app__body{
+  background-color: black;
+  margin: 0;
+  display: grid;
+  place-items: center;
+  z-index: -1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: black;
+  padding-top: 36px;
+  width: 1024px;
+  box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.7);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  z-index: 50;
 }
