--- a/stocks-app/src/Components/NewsFeed/NewsFeed.css
+++ b/stocks-app/src/Components/NewsFeed/NewsFeed.css
@@ -2,7 +2,6 @@
     flex: 0.7;
     display: flex;
     flex-direction: column;
-    background-color: black;
   }
 
 .newsfeed__container {
@@ -23,5 +22,11 @@
     margin-top: 0;
 } 
 
-  .newsfeed__chartSection {
+.newsfeed__chartSection {
+    display: flex;
+    flex-direction: column;
+}
+
+.newsfeed__chart{
+  width: 100%;
 }
